--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/summer_full_2019
-spring.datasource.username=root
-spring.datasource.password=root
+#spring.datasource.url=jdbc:mysql://localhost:3306/summer_full_2019
+#spring.datasource.username=root
+#spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://a5s42n4idx9husyc.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/y1ahf7v4uvatlcu8
+spring.datasource.username=zzslwuondi4byze6
+spring.datasource.password=avolrtiembt8z0cy
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
