--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 #spring.datasource.url=jdbc:mysql://localhost:3306/summer_full_2019
 #spring.datasource.username=root
 #spring.datasource.password=root
-spring.datasource.url=jdbc:mysql://a5s42n4idx9husyc.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/y1ahf7v4uvatlcu8
-spring.datasource.username=zzslwuondi4byze6
-spring.datasource.password=avolrtiembt8z0cy
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://us-cdbr-iron-east-02.cleardb.net:3306/heroku_25d64419c474f19
+spring.datasource.username=be2df9f6e51bf9
+spring.datasource.password=3c8b9191
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
